fixed right alignment of navbar

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    align-items: right;
+    /*align-items: right;*/
   }
   
   .clockMeta {
